--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							Services
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#OurServices">Responsive & Professional</a>
+							<a class="dropdown-item" href="#Services">Responsive & Professional</a>
 							<a class="dropdown-item" href="#">Services Item 2</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Something else here</a>
@@ -207,7 +207,7 @@
 					<div class="row align-items-center">
 						<img src="img/img-02.jpg" class="rounded-circle w-auto mr-3" alt="">
 						<div class="border-right border-right pr-3">
-							<h5 class="pt-2 poppi">Mark Smith</h5>
+							<h5 class="pt-2">Mark Smith</h5>
 							<p class="poppi">Your own Electrician</p>
 						</div>
 						<img src="img/img-01.png" class="ml-3 w-auto" alt="">
@@ -281,7 +281,7 @@
 	</div>
 	<!--End Three Section Column -->
 	<!-- Services  -->
-	<section class="my-5" id="OurServices">
+	<section class="my-5" id="Services">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
@@ -295,7 +295,7 @@
 						assured, we put the same level of energy into every project we take on.</p>
 					<div class="align-items-center">
 						<p class="poppi font-weight-bold">Call us today</p>
-						<h5 class="poppi text-success font-weight-bold"><i class="fas fa-phone text-success mr-3"></i>
+						<h5 class="text-success font-weight-bold"><i class="fas fa-phone text-success mr-3"></i>
 							1-(800)-765-43-21
 						</h5>
 						<p class="poppi">We’re available 24/7, 365 days a year.</p>
@@ -322,7 +322,7 @@
 						<figure class="col-lg-4 col-md-6 animation all 1">
 							<img class="w-100" src="img/gallery/obj-img01.jpg" alt="Card image cap">
 							<figcaption class="">
-								<h5 class="poppi font-weight-bold">Electrical Repairs</h5>
+								<h5 class="font-weight-bold">Electrical Repairs</h5>
 								<p class="poppi">Electrical repairs should always be handled by a professional
 									electrician.</p>
 								<a href="" class="poppi text-dark">Read more
@@ -333,7 +333,7 @@
 						<figure class="col-lg-4 col-md-6 animation all 2">
 							<img class="w-100" src="img/gallery/obj-img02.jpg" alt="Card image cap">
 							<figcaption class="">
-								<h5 class="poppi font-weight-bold">Panel Upgrades</h5>
+								<h5 class="font-weight-bold">Panel Upgrades</h5>
 								<p class="poppi">Electrical panel maintenance, therefore, should be part of your
 									regular
 									routine.</p>
@@ -357,7 +357,7 @@
 						<figure class="col-lg-4 col-md-6 animation all 1">
 							<img class="w-100" src="img/gallery/obj-img04.jpg" alt="Card image cap">
 							<figcaption class="">
-								<h5 class="poppi font-weight-bold">Surge Protection</h5>
+								<h5 class="font-weight-bold">Surge Protection</h5>
 								<p class="poppi">An electrical surge can happen for a number of reasons, including
 									lightning strikes.</p>
 								<a href="" class="poppi text-dark">Read more
@@ -379,7 +379,7 @@
 						<figure class="col-lg-4 col-md-6 animation all 1">
 							<img class="w-100" src="img/gallery/obj-img06.jpg" alt="Card image cap">
 							<figcaption class="">
-								<h5 class="poppi font-weight-bold">Surge Protection</h5>
+								<h5 class="font-weight-bold">Surge Protection</h5>
 								<p class="poppi">An electrical surge can happen for a number of reasons, including
 									lightning strikes.</p>
 								<a href="" class="poppi text-dark">Read more
@@ -401,7 +401,7 @@
 						<figure class="col-lg-4 col-md-6 animation all 2">
 							<img class="w-100" src="img/gallery/obj-img08.jpg" alt="Card image cap">
 							<figcaption class="">
-								<h5 class="poppi font-weight-bold">Digital Thermostat Installation</h5>
+								<h5 class="font-weight-bold">Digital Thermostat Installation</h5>
 								<p class="poppi">Give us a call to plan your Digital Thermostat Installation today.</p>
 								<a href="" class="poppi text-dark">Read more
 									<i class="fas fa-chevron-right text-success ml-1"></i>
@@ -411,7 +411,7 @@
 						<figure class="col-lg-4 col-md-6 animation all 3">
 							<img class="w-100" src="img/gallery/obj-img09.jpg" alt="Card image cap">
 							<figcaption class="">
-								<h5 class="poppi font-weight-bold">Baseboard Heating Installation</h5>
+								<h5 class="font-weight-bold">Baseboard Heating Installation</h5>
 								<p class="poppi">Baseboard heaters are one of the easiest systems to operate.</p>
 								<a href="" class="poppi text-dark">Read more
 									<i class="fas fa-chevron-right text-success ml-1"></i>
@@ -422,8 +422,6 @@
 
 				</div>
 			</div>
-
-
 			<!-- Button trigger modal -->
 			<div class="row">
 				<button type="button" class="btn btn-success my-5 mx-auto py-2 px-3" data-toggle="modal"
@@ -467,8 +465,233 @@
 
 		</div>
 	</section>
-
 	<!--End Services -->
+
+	<!--Prices -->
+	<!----Prices Showcase-->
+	<section id="Prices" class="">
+		<div class="showcase">
+			<!-- <img src="img/box01-bg02-desktop.jpg" class="w-100" alt=""> -->
+			<div class="container">
+				<div class="row justify-content-end">
+					<div class="showcasecontent p-5 col-lg-5 col-md-6 col-sm-8">
+						<h3 class="pl-3 ">Your <span class="text-success">Best
+								Option</span><br>in
+							Electrical <br>Contractors 24/7
+						</h3>
+						<p>Our experienced electricians are highly trained in all aspects of electrical service, from
+							office
+							lighting and security systems to emergency repair.</p>
+						<a class="btn btn-success mx-auto py-2 px-3" href="#Services" role="button"><i
+								class="fas fa-bolt text-white mr-2"></i>Explore Services</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!----Prices Gallery-->
+		<!--Carousel Wrapper-->
+		<div class="container">
+			<div class="mt-5">
+				<div class="text-center">
+					<h4 class="text-success">Save on the Service You Need</h4>
+					<h2>Maintenance Plans</h2>
+					<p class="mt-auto center">With an electrical maintenance plan, you won’t find yourself in a panic
+						wondering <br>who to call when you’re having problems with your electrical system.</p>
+				</div>
+			</div>
+			<div id="multi-item-carousel" class="carousel slide carousel-multi-item carousel-multi-item-2"
+				data-ride="carousel" data-interval="40000">
+				<!--Controls-->
+				<!-- <div class="controls-top">
+					<a class="black-text" href="#multi-item-carousel" data-slide="prev"><i
+							class="fas fa-angle-left fa-3x pr-3"></i></a>
+					<a class="black-text" href="#multi-item-carousel" data-slide="next"><i
+							class="fas fa-angle-right fa-3x pl-3"></i></a>
+				</div> -->
+				<!--Controls-->
+				<!--indicators-->
+				<ol class="carousel-indicators">
+					<li data-target="#multi-item-carousel" data-slide-to="0" class="active"></li>
+					<li data-target="#multi-item-carousel" data-slide-to="1"></li>
+					<li data-target="#multi-item-carousel" data-slide-to="2"></li>
+				</ol>
+				<!--/.indicators-->
+				<!--Slides-->
+				<div class="carousel-inner" role="listbox">
+					<!--First slide-->
+					<div class="carousel-item active">
+						<div class="row">
+							<div class="card col-md-4">
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-dumpster fa-2x text-success"></i>
+									<h5 class="card-title">Commercial service</h5>
+									<ul class="p-0 text-left text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€230.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+							<div class="card col-md-4">
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-industry fa-2x text-success"></i>
+									<h5 class="card-title">Industrial service</h5>
+									<ul class="p-0 text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€155.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+							<div class="card col-md-4">
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-home fa-2x text-success"></i>
+									<h5 class="card-title">Residential service</h5>
+									<ul class="p-0 text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€190.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--/.First slide-->
+
+					<!--Second slide-->
+					<div class="carousel-item">
+						<div class="row">
+							<div class="card col-md-4">
+								<div class="card-body text-center">
+									<i class="fas fa-dumpster fa-2x"></i>
+									<h5 class="card-title">Commercial service</h5>
+									<ul class="p-0">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€230.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+							<div class="card col-md-4">
+								<div class="card-body text-center">
+									<i class="fas fa-industry fa-2x"></i>
+									<h5 class="card-title">Industrial service</h5>
+									<ul class="p-0">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€155.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+							<div class="card col-md-4">
+								<div class="card-body text-center">
+									<i class="fas fa-home fa-2x"></i>
+									<h5 class="card-title">Residential service</h5>
+									<ul class="p-0">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+
+									</ul>
+									<hr class="muted">
+									<h3>€190.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--/.Second slide-->
+
+					<!--Third slide-->
+					<div class="carousel-item">
+						<div class="row">
+							<div class="card col-md-4">
+								<div class="card-body text-center">
+									<i class="fas fa-dumpster fa-2x"></i>
+									<h5 class="card-title">Commercial service</h5>
+									<ul class="p-0">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€230.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+							<div class="card col-md-4">
+								<div class="card-body text-center">
+									<i class="fas fa-industry fa-2x"></i>
+									<h5 class="card-title">Industrial service</h5>
+									<ul class="p-0">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+									</ul>
+									<hr class="muted">
+									<h3>€155.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+							<div class="card col-md-4">
+								<div class="card-body text-center">
+									<i class="fas fa-home fa-2x"></i>
+									<h5 class="card-title">Residential service</h5>
+									<ul class="p-0">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										</li>
+
+									</ul>
+									<hr class="muted">
+									<h3>€190.00</h3>
+									<a href="#" class="card-link text-success">Order now</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--/.Third slide-->
+
+				</div>
+			</div>
+
+		</div>
+		<!--/.Carousel Wrapper-->
+	</section>
+	<!--End Prices -->
 
 
 
@@ -557,7 +780,7 @@
 		$(function () {
 			var selectedClass = "";
 			$(".filter").click(function () {
-				$("button").even().removeClass("active");
+				$("button").removeClass("active");
 				selectedClass = $(this).attr("data-rel");
 				$("#gallery").fadeTo(100, 0.1);
 				$("#gallery figure").not("." + selectedClass).fadeOut().removeClass('animation');
