--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Prices</a>
+						<a class="nav-link" href="#Prices">Prices</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Gallery</a>
+						<a class="nav-link" href="#OurGallery">Gallery</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Blog</a>
@@ -112,7 +112,7 @@
 	<!-- End Navigation -->
 
 	<!-- Image Carousel -->
-	<div id="carousel1" class="carousel slide carousel-fade mb-lg-5" data-interval="40000" data-ride="carousel">
+	<div id="carousel1" class="carousel slide carousel-fade mb-lg-5" data-interval="4000" data-ride="carousel">
 		<!-- <ol class="carousel-indicators">
 			<li data-target="#carousel1" data-slide-to="0" class="active"></li>
 			<li data-target="#carousel1" data-slide-to="1"></li>
@@ -180,7 +180,7 @@
 			class="fas fa-bolt fa-2x text-white"></i></button>
 	<!-- End Image Carousel -->
 
-	<!-- Two Column Section -->
+	<!-- About Us Section -->
 	<section class="" id="AboutUs">
 		<div class="container">
 			<div class="row">
@@ -216,7 +216,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- End Two Section Column -->
+	<!-- About Us  Section -->
 	<!-- Three Section Column -->
 	<div class="wrapper">
 		<div class="row">
@@ -317,10 +317,10 @@
 					</div>
 				</div>
 
-				<div class="gallery" id="gallery">
+				<div class="gallery" id="GalleryServices">
 					<div class="row">
 						<figure class="col-lg-4 col-md-6 animation all 1">
-							<img class="w-100" src="img/gallery/obj-img01.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img01.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="font-weight-bold">Electrical Repairs</h5>
 								<p class="poppi">Electrical repairs should always be handled by a professional
@@ -331,7 +331,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 2">
-							<img class="w-100" src="img/gallery/obj-img02.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img02.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="font-weight-bold">Panel Upgrades</h5>
 								<p class="poppi">Electrical panel maintenance, therefore, should be part of your
@@ -343,7 +343,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 3">
-							<img class="w-100" src="img/gallery/obj-img03.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img03.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="poppi font-weight-bold">Lighting Upgrades</h5>
 								<p class="poppi">Lighting can enhance and change the mood, the look and feel of any
@@ -355,7 +355,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 1">
-							<img class="w-100" src="img/gallery/obj-img04.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img04.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="font-weight-bold">Surge Protection</h5>
 								<p class="poppi">An electrical surge can happen for a number of reasons, including
@@ -366,7 +366,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 2">
-							<img class="w-100" src="img/gallery/obj-img05.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img05.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="poppi font-weight-bold">Install a Ceiling Fan</h5>
 								<p class="poppi">If you need a ceiling fan installed, repaired, or updated, our
@@ -377,7 +377,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 1">
-							<img class="w-100" src="img/gallery/obj-img06.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img06.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="font-weight-bold">Surge Protection</h5>
 								<p class="poppi">An electrical surge can happen for a number of reasons, including
@@ -388,7 +388,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 1">
-							<img class="w-100" src="img/gallery/obj-img07.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img07.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="poppi font-weight-bold">Outdoor and Motion Lighting</h5>
 								<p class="poppi">Outdoor Lighting can transform your living space completely.
@@ -399,7 +399,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 2">
-							<img class="w-100" src="img/gallery/obj-img08.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img08.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="font-weight-bold">Digital Thermostat Installation</h5>
 								<p class="poppi">Give us a call to plan your Digital Thermostat Installation today.</p>
@@ -409,7 +409,7 @@
 							</figcaption>
 						</figure>
 						<figure class="col-lg-4 col-md-6 animation all 3">
-							<img class="w-100" src="img/gallery/obj-img09.jpg" alt="Card image cap">
+							<img class="w-100" src="img/galleryservices/obj-img09.jpg" alt="Card image cap">
 							<figcaption class="">
 								<h5 class="font-weight-bold">Baseboard Heating Installation</h5>
 								<p class="poppi">Baseboard heaters are one of the easiest systems to operate.</p>
@@ -499,7 +499,7 @@
 						wondering <br>who to call when you’re having problems with your electrical system.</p>
 				</div>
 			</div>
-			<div id="multi-item-carousel" class="carousel slide carousel-multi-item carousel-multi-item-2"
+			<div id="multi-item-carousel" class="carousel slide carousel-multi-item carousel-multi-item-2 mb-5"
 				data-ride="carousel" data-interval="40000">
 				<!--Controls-->
 				<!-- <div class="controls-top">
@@ -583,13 +583,16 @@
 					<div class="carousel-item">
 						<div class="row">
 							<div class="card col-md-4">
-								<div class="card-body text-center">
-									<i class="fas fa-dumpster fa-2x"></i>
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-dumpster fa-2x text-success"></i>
 									<h5 class="card-title">Commercial service</h5>
-									<ul class="p-0">
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+									<ul class="p-0 text-left text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
 										</li>
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
 										</li>
 									</ul>
 									<hr class="muted">
@@ -598,13 +601,16 @@
 								</div>
 							</div>
 							<div class="card col-md-4">
-								<div class="card-body text-center">
-									<i class="fas fa-industry fa-2x"></i>
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-industry fa-2x text-success"></i>
 									<h5 class="card-title">Industrial service</h5>
-									<ul class="p-0">
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+									<ul class="p-0 text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
 										</li>
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
 										</li>
 									</ul>
 									<hr class="muted">
@@ -613,15 +619,17 @@
 								</div>
 							</div>
 							<div class="card col-md-4">
-								<div class="card-body text-center">
-									<i class="fas fa-home fa-2x"></i>
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-home fa-2x text-success"></i>
 									<h5 class="card-title">Residential service</h5>
-									<ul class="p-0">
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+									<ul class="p-0 text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
 										</li>
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
 										</li>
-
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
+										</li>
 									</ul>
 									<hr class="muted">
 									<h3>€190.00</h3>
@@ -636,13 +644,16 @@
 					<div class="carousel-item">
 						<div class="row">
 							<div class="card col-md-4">
-								<div class="card-body text-center">
-									<i class="fas fa-dumpster fa-2x"></i>
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-dumpster fa-2x text-success"></i>
 									<h5 class="card-title">Commercial service</h5>
-									<ul class="p-0">
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+									<ul class="p-0 text-left text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
 										</li>
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
 										</li>
 									</ul>
 									<hr class="muted">
@@ -651,13 +662,16 @@
 								</div>
 							</div>
 							<div class="card col-md-4">
-								<div class="card-body text-center">
-									<i class="fas fa-industry fa-2x"></i>
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-industry fa-2x text-success"></i>
 									<h5 class="card-title">Industrial service</h5>
-									<ul class="p-0">
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+									<ul class="p-0 text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
 										</li>
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
+										</li>
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
 										</li>
 									</ul>
 									<hr class="muted">
@@ -666,15 +680,17 @@
 								</div>
 							</div>
 							<div class="card col-md-4">
-								<div class="card-body text-center">
-									<i class="fas fa-home fa-2x"></i>
+								<div class="card-body text-center border border-muted">
+									<i class="fas fa-home fa-2x text-success"></i>
 									<h5 class="card-title">Residential service</h5>
-									<ul class="p-0">
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+									<ul class="p-0 text-left">
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor
+											sit.
 										</li>
-										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem ipsum dolor sit amet.
 										</li>
-
+										<li><i class="fas fa-check text-success mr-2"></i>Lorem, ipsum dolor.
+										</li>
 									</ul>
 									<hr class="muted">
 									<h3>€190.00</h3>
@@ -692,11 +708,49 @@
 		<!--/.Carousel Wrapper-->
 	</section>
 	<!--End Prices -->
+	<!--Gallery section -->
+	<section id="OurGallery" class="my-5">
+		<div class="container">
+			<div class="text-center">
+				<h5 class="text-success">Electrical Gallery</h5>
+				<h2 class="m-auto p-3">Our Photo Gallery</h2>
+				<p class="col-lg-8 mx-auto ">You will really enjoy doing business with us! Fast, electrical estimates at
+					a competitive price. We save you time and money. Interested? Check out our photos.</p>
+				<div class="col-md-12 mb-3">
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter active"
+						data-rel="all">All</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter"
+						data-rel="1">Other</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter"
+						data-rel="2">Heating</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="3">Air
+						Conditioning</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter" data-rel="4">Security
+						System</button>
+					<button type="button" class="btn poppi font-weight-bold waves-effect filter"
+						data-rel="5">Electrical</button>
+				</div>
+			</div>
 
-
-
-
-
+			<div class="gallery" id="">
+				<div class="row">
+					<figure class="col-lg-4 col-md-6 animation all 1">
+						<a href="img/gallery/gallery-img01.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img01.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 2">
+						<a href="img/gallery/gallery-img02.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img02.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 3">
+						<a href="img/gallery/gallery-img03.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img03.jpg" alt="Card image cap"></a>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--Gallery section -->
 
 	<!-- End of Three Section Column -->
 
@@ -746,6 +800,8 @@
 	<!-- Font Awesome -->
 	<script src="js/all.min.js"></script>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+
 	<!-- End Script Source Files -->
 
 	<!-- Script Home Button -->
@@ -782,17 +838,15 @@
 			$(".filter").click(function () {
 				$("button").removeClass("active");
 				selectedClass = $(this).attr("data-rel");
-				$("#gallery").fadeTo(100, 0.1);
-				$("#gallery figure").not("." + selectedClass).fadeOut().removeClass('animation');
+				$(".gallery").fadeTo(100, 0.1);
+				$(".gallery figure").not("." + selectedClass).fadeOut().removeClass('animation');
 				setTimeout(function () {
 					$("." + selectedClass).fadeIn().addClass('animation');
-					$("#gallery").fadeTo(300, 1);
+					$(".gallery").fadeTo(300, 1);
 				}, 300);
 			});
 		});
 	</script>
-
-
 
 </body>
 
