--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"
 		rel="stylesheet">
+	<!-- BaguetteBox Gallery -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
 </head>
 
 <body>
@@ -735,16 +737,20 @@
 			<div class="gallery" id="">
 				<div class="row">
 					<figure class="col-lg-4 col-md-6 animation all 1">
-						<a href="img/gallery/gallery-img01.jpg">
+						<a class="lightbox" href="img/gallery/gallery-img01.jpg">
 							<img class="img-fluid" src="img/gallery/gallery-img01.jpg" alt="Card image cap"></a>
 					</figure>
 					<figure class="col-lg-4 col-md-6 animation all 2">
-						<a href="img/gallery/gallery-img02.jpg">
+						<a class="lightbox" href="img/gallery/gallery-img02.jpg">
 							<img class="img-fluid" src="img/gallery/gallery-img02.jpg" alt="Card image cap"></a>
 					</figure>
 					<figure class="col-lg-4 col-md-6 animation all 3">
-						<a href="img/gallery/gallery-img03.jpg">
+						<a class="lightbox" href="img/gallery/gallery-img03.jpg">
 							<img class="img-fluid" src="img/gallery/gallery-img03.jpg" alt="Card image cap"></a>
+					</figure>
+					<figure class="col-lg-4 col-md-6 animation all 1">
+						<a class="lightbox" href="img/gallery/gallery-img04.jpg">
+							<img class="img-fluid" src="img/gallery/gallery-img04.jpg" alt="Card image cap"></a>
 					</figure>
 				</div>
 			</div>
@@ -799,8 +805,8 @@
 	<script src="js/popper.min.js"></script>
 	<!-- Font Awesome -->
 	<script src="js/all.min.js"></script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+	<!-- Baguettebox -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
 
 	<!-- End Script Source Files -->
 
@@ -846,6 +852,11 @@
 				}, 300);
 			});
 		});
+	</script>
+
+	<!-- baguetteBox -->
+	<script>
+		baguetteBox.run('.gallery');
 	</script>
 
 </body>
